Resolved iframe issue. Requires display:flex to be put on the parent row element, and then iframe element wrapped in a div with class .iframe-content

--- a/_sass/foundation/components/_custom-intersections.scss
+++ b/_sass/foundation/components/_custom-intersections.scss
@@ -395,3 +395,8 @@ div.footer-logo > a img {
 
 // HANDLER FOR IFRMAE
 
+.iframe-content {
+	align-items: stretch;
+	flex: 1;
+	// border: 1px solid red;
+}
